<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"> 
    <string name="search_title_info">Searching...</string>
    <string name="station_info">Station</string>
    <string name="stop_info">Stop</string>
    <string name="freq_unit">MHz</string>
    <string name="panel_color">Panel Color</string>
    <string name="auto_search">Auto Search</string>
    <string name="from_current_search">Search from current</string>
    <string name="delete_all">Delete All</string>
    <string name="close_fm">Turn off Radio</string>
    <string name="audio_headset">To speaker</string>
    <string name="audio_speaker">To headset</string>
    <string name="radio_list">Radio List</string>
    <string name="add_station">Add to list</string>
    <string name="freq_input_info">Please input frequency.</string>
    <string name="range_error">Out of the radio range(87.5MHz-108MHz).</string>    
    <string name="input_too_many_error">The input character beyond the limit of the length.</string>      
    <string name="range_format_error">Input format error.</string>
    <string name="name_input_info">Please input station name.</string>
    <string name="name_notis_empty">Station name can not be empty.</string>
    <string name="name_error">It exists the same name.</string>
    <string name="edit_list">Radio List</string>
    <string name="freq_error">It exists the same frequency.</string>
    <string name="add_title">Add Station</string>
    <string name="edit_title">Edit Station</string>
    <string name="app_name">FM Radio</string>
    <string name="radio_switch">Turn On Radio</string>
    <string name="delete_title">Delete</string>
    <string name="clear_title">Clear</string>
    <string name="search_title">Search</string>
    <string name="delete_delete">OK</string>
    <string name="delete_cancel">Cancel</string>
    <string name="delete_message">The station item will be deleted.</string>
    <string name="clear_message">All the stations will be deleted.</string>
    <string name="search_message">Are you sure you want automatic station search?</string>
    <string name="current_freq_error">It exists the same frequency as current frequency listenning to in the radio list.</string>
    <string name="stop_search">Searching is terminated.</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="station_freq">Frequency(MHz)</string>
    <string name="station_name">Station Name</string>
    <string name="comment">Run FM Radio in foreground.</string>
    <string name="stop_service">FM radio is turned off because the headset is unplugged.</string>
    <string name="start_info">FM radio is being turned on</string>
    <string name="airplane_title">Airplane Mode Warning</string>
    <string name="airplane_message">Cannot turn on FM Radio in airplane mode.</string>
    <string name="phone_title">Phone Warning</string>
    <string name="phone_message">Cannot turn on FM Radio while calling.</string>
    <string name="headset_title">Headset Warning</string>
    <string name="headset_message">Please insert headset as antenna.</string>
    <string name="headset_button">Done</string>
    <string name="open_error_title">Open Error</string>
    <string name="open_error_message">Fail to turn on radio.</string>
    <string name="input_too_many_chars">The entered name is too long.</string>
    <string name="bluetooth_title">Bluetooth Warning</string>
    <string name="bluetooth_message">Please turn bluetooth on before listenning to FM Radio.</string>
    <string name="bluetooth_disabled_message">FM Radio exited because bluetooth has been disabled.</string>
    <string name="bluetooth_error_message">FM Radio exited because it failed to read bluetooth status.</string>
    <string name="manual_seeking">Seeking</string>
    <string name="manual_seek_failed">Failed</string>
    <string name="same_info">It exists the same station with the same name in station list.</string>
    <string name="airplane_info">FM radio is closed because airplane mode is open.</string>    
    <string name="airplane_info_close">FM radio is open because airplane mode is closed.</string>
    <string name="have_been_completed">Have been completed.</string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="button_ok">Ok</string>
    <string name="error_sdcard_access">Unable to access SD card</string>
    <string name="error_app_internal">Internal application error</string>
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>    
	<string name="storage_is_full">Storage is full</string>
	<string name="start_recorder">Start Recorder</string>
	<string name="stop_recorder">Stop Recorder</string>
	<string name="suggest">Suggestion</string>
	<string name="suggest_message">Whether to enter the edit list,modify the list?</string>
    <string name="button_cancel">cancel</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="collection_radio">Collection Radio</string>
    <string name="collection">Collection</string>
</resources>
