<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent">
                
        <LinearLayout   android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip" >
        
             <ImageView android:paddingTop="12dip"
                        android:paddingRight="5dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_dialog_alert" />
             
             <TextView  android:paddingTop="5dip"
                        android:paddingLeft="10dip"
                        android:singleLine="true"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:text="@string/search_title"
                        android:layout_height="wrap_content" />
        
        </LinearLayout>

        <ImageView  android:id="@+id/titleDivider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="10dip"
                    android:visibility="visible"
                    android:scaleType="fitXY"
                    android:gravity="fill_horizontal"
                    android:src="@android:drawable/divider_horizontal_dark" />
        
        <TextView   android:paddingTop="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:text="@string/search_message"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                    
        <LinearLayout   android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dip"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip" >
                        
            <Button android:id="@+id/bt_ok"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:focusable = "true"
                    android:background="@drawable/alert_button"
                    android:text="@string/delete_delete"/>
                    
            <Button android:id="@+id/bt_cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:focusable = "true"
                    android:background="@drawable/alert_button"
                    android:text="@string/delete_cancel" />
                    
        </LinearLayout>
        
</LinearLayout>
