<?xml version="1.0" encoding="utf-8"?>
<LinearLayout   xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent" 
                android:layout_height="fill_parent">
                
        <LinearLayout   android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="5dip"
                        android:layout_marginRight="5dip" >
        
             <ImageView android:paddingTop="12dip"
                        android:paddingRight="1dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_dialog_alert" />
             
             <TextView  android:paddingTop="5dip"
                        android:paddingLeft="1dip"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:layout_width="wrap_content"
                        android:text="@string/airplane_title"
                        android:layout_height="wrap_content" />
        
        </LinearLayout>

        <ImageView  android:id="@+id/titleDivider"
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginTop="10dip"
                    android:visibility="visible"
                    android:scaleType="fitXY"
                    android:gravity="fill_horizontal"
                    android:src="@android:drawable/divider_horizontal_dark" />
        
        <TextView   android:paddingTop="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:ellipsize="end"
                    android:text="@string/airplane_message"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

        <RelativeLayout android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:layout_marginTop="10dip" >
            <Button     android:id="@+id/bt_ok"
                        android:layout_width="100sp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:focusable = "true"
                        android:background="@drawable/alert_button"
                        android:text="@string/bt_ok"/>
         </RelativeLayout>
</LinearLayout>
